# hacs-llm-sandbox

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  hacs.json  package.json  pnpm-lock.yaml  pyproject.toml
.agents/skills/cate-cli/: SKILL.md
.agents/skills/python-rich/: SKILL.md
.agents/skills/python-rich/agents/: openai.yaml
.agents/skills/python-rich/references/: core-console.md  dynamic-and-input.md  extension-protocols.md  static-renderables.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: docs.yml  validate.yml
custom_components/llm_sandbox/: __init__.py  config_flow.py  const.py  manifest.json  runtime.py  schema_helpers.py  strings.json  types.py
custom_components/llm_sandbox/llm_api/: AGENTS.md  __init__.py  _hinting.py  api.py  await_normalization.py  builtin_normalization.py  contracts.py  errors.py  executor.py  executor_support.py  facade_registry.py  facade_views.py  home_db.py  legacy_notes.py  literal_resolution.py  numeric.py  prompts.py  recorder_tools.py  resolution.py  resolution_memory.py  result_binding.py  runtime.py  sandbox_context.py  selector_expansion.py  target_matching.py
custom_components/llm_sandbox/llm_api/data/: __init__.py  energy.py  history.py  home_db.py  recorder_scope.py  selectors.py
custom_components/llm_sandbox/llm_api/executor_support/: __init__.py  output.py  refinement.py  state.py
custom_components/llm_sandbox/llm_api/facades/: __init__.py  context.py  registries.py  services.py  services_discovery.py  state.py
custom_components/llm_sandbox/llm_api/guidance/: __init__.py  context.py  payload.py  policy.py  scoring.py  sources.py
custom_components/llm_sandbox/llm_api/normalization/: __init__.py  await_normalization.py  builtin_normalization.py  datetime_normalization.py  engine.py  scopes.py  surfaces.py
custom_components/llm_sandbox/llm_api/prompts/: __init__.py  catalog.py  content.py  profiles.py
custom_components/llm_sandbox/llm_api/tools/: AGENTS.md  __init__.py  _aggregates.py  _analytics.py  _cursor.py  _recorder_runtime.py  _support.py  automation.py  code.py  energy.py  recorder.py  vision.py
custom_components/llm_sandbox/snapshot/: __init__.py  builder.py  models.py  services.py
custom_components/llm_sandbox/translations/: en.json
docs-site/: docusaurus.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sidebars.ts
docs-site/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
docs-site/.docusaurus/docusaurus-plugin-content-docs/default/: __mdx-loader-dependency.json  site-docs-architecture-facade-surface-md-243.json  site-docs-architecture-guidance-and-recovery-md-862.json  site-docs-architecture-integration-lifecycle-md-455.json  site-docs-architecture-llm-api-registration-md-dae.json  site-docs-architecture-overview-md-0b1.json  (+48 more)
docs-site/docs/: intro.md  release-notes.md  troubleshooting.md  upgrades.md
docs-site/docs/architecture/: facade-surface.md  guidance-and-recovery.md  integration-lifecycle.md  llm-api-registration.md  monty-execution.md  overview.md  recorder-tools.md  service-call-gating.md  snapshot-pipeline.md  vision-tool.md
docs-site/docs/concepts/: action-safety.md  assist-tool-calling.md  model-quality-and-cost.md  recorder-and-sql.md  sandbox-boundaries.md  snapshots-and-visibility.md
docs-site/docs/configuration/: actions.md  execution-limits.md  overview.md  prompt-profiles.md  visibility.md
docs-site/docs/development/: contributing.md  eval-harness.md  local-setup.md  validation.md
docs-site/docs/installation/: enable-in-assist.md  install-with-hacs.md  prerequisites.md
docs-site/docs/operations/: choosing-a-model.md  performance-and-token-cost.md  privacy-and-security.md
docs-site/docs/reference/: configuration-options.md  error-keys.md  limits.md  monty-globals.md  sql-schema.md
docs-site/docs/usage/: camera-images.md  example-prompts.md  history-statistics-logbook.md  quickstart.md  service-actions.md  state-and-registry-questions.md
docs-site/src/css/: custom.css
docs-site/static/: llms.txt
llm_sandbox_evals/: AGENTS.md  README.md  __init__.py  __main__.py  agent_runner.py  cases.py  cli.py  code_judge.py  config.py  experiment.py  harness.py  html_report.py  logfire_config.py  markdown_report.py  models.py  optimize_dspy.py  optimize_helpers.py  phases.py  presentation.py  prompts.py  reports.py  runtime.py  schema.py  scoring.py  statistics.py  terminal.py  tool_events.py  tools.py  tui.py
llm_sandbox_evals/data/: cases.yaml  cases_schema.json
llm_sandbox_evals/homes/: __init__.py  home_cover.py  home_default.py  home_full.py  home_large.py  home_minimal.py  home_real.py  home_real_data.json
llm_sandbox_evals/scoring/: __init__.py  _facts.py  actions.py  assertions.py  automation.py  contracts.py  end_state.py  evaluate.py  evidence.py  execute.py  history.py  logbook.py  read_answers.py  statistics.py  tool_calls.py
scripts/: check  check-evals  format  format-evals  lint-check  markdown-check  optimize-evals  run-docker  run-evals  setup  test  test-smoke  yaml-check
tests/components/llm_sandbox/: conftest.py  test_config_flow.py  test_guidance.py  test_setup.py
tests/llm_sandbox_evals/: conftest.py  test_agent_output_modes.py  test_cases_dataset.py  test_cli.py  test_code_judge.py  test_end_state_scoring.py  test_experiment_native.py  test_harness_model_errors.py  test_homes.py  test_html_report.py  test_markdown_report.py  test_models_pydantic_ai.py  test_optimize_dspy_model_ids.py  test_presentation.py  test_prompt_sizing.py  test_read_answer_scoring.py  test_reports_v2.py  test_reports_v3.py  test_reports_v4.py  test_reports_v5.py  test_reports_v6.py  test_reports_v7.py  test_reports_v8.py  test_scoring.py  test_terminal.py  test_tool_call_scoring.py  test_tool_contracts.py  test_tools_automation.py  test_tools_energy.py  test_tools_recorded_actions.py  test_tools_recorder.py
(+38 files in other folders)
