[project]
name = "hacs-llm-sandbox"
version = "0.1.0"
description = "Home Assistant custom integration for LLM code execution in a Monty sandbox"
readme = "README.md"
topics = ["home-assistant", "llm", "monty"]
requires-python = ">=3.14.2"
license = "Apache-2.0"
dependencies = ["pydantic-monty==0.0.18", "pillow==12.2.0"]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "codespell>=2.4.2",
  "home-assistant-intents>=2026.6.24",
  "homeassistant>=2026.6.4",
  "mypy>=2.1.0",
  "pre-commit>=4.6.0",
  "pytest-aiohttp>=1.1.0",
  "pytest-asyncio>=1.3.0",
  "pytest-homeassistant-custom-component>=0.13.340",
  "pytest-timeout>=2.4.0",
  "pytest-xdist>=3.8.0",
  "pytest>=9.0.3",
  "ruff>=0.15.20",
  "yamllint>=1.37.1",
]
evals = [
  "pydantic-ai-slim[openai,anthropic,openrouter,google]>=2.5.0",
  "pydantic-evals[logfire]>=2.5.0",
  "python-dotenv>=1.0",
  "rich>=13.0",
  "dspy>=2.6",
]

[tool.ruff]
required-version = ">=0.15.20"
target-version = "py314"
line-length = 119
src = ["custom_components", "tests", "scripts"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C",
    "D",
    "DTZ",
    "E",
    "F",
    "G",
    "I",
    "LOG",
    "N804",
    "N805",
    "N806",
    "N815",
    "PERF",
    "PGH",
    "PIE",
    "PT",
    "PTH",
    "RET",
    "RSE",
    "RUF",
    "S102",
    "S103",
    "S108",
    "S301",
    "S306",
    "S307",
    "S313",
    "S314",
    "S315",
    "S316",
    "S317",
    "S318",
    "S319",
    "S601",
    "S602",
    "S604",
    "S608",
    "S609",
    "SIM",
    "SLOT",
    "T100",
    "T20",
    "TC",
    "TID251",
    "UP",
    "W",
]
ignore = [
    "B008",
    "D202",
    "D203",
    "D213",
    "D406",
    "D407",
    "D417",
    "E501",
    "SIM108",
    "TC001",
    "TC002",
    "TC003",
    "TC006",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["llm_sandbox"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"__future__.annotations".msg = "not needed because this project requires Python 3.14+"
"async_timeout".msg = "use asyncio.timeout instead"
"pytz".msg = "use zoneinfo instead"
"tests".msg = "do not import from tests"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D104"]
"tests/**/*.py" = ["ARG", "D", "ANN", "TC", "TID251"]

[tool.mypy]
files = ["custom_components", "tests"]
python_version = "3.14"
platform = "linux"
show_error_codes = true
pretty = true
follow_imports = "normal"
local_partial_types = true
explicit_package_bases = true
strict_equality = true
strict_bytes = true
no_implicit_optional = true
warn_incomplete_stub = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
enable_error_code = ["deprecated", "ignore-without-code", "redundant-self", "truthy-iterable"]
disable_error_code = ["annotation-unchecked", "import-not-found", "import-untyped"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
disable_error_code = [
    "call-overload",
    "arg-type",
    "index",
    "operator",
    "union-attr",
    "unreachable",
    "var-annotated",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/components/llm_sandbox", "tests/llm_sandbox_evals"]

[tool.codespell]
ignore-words-list = ["hass", "nam", "iac", "sht", "hel", "iif", "NotIn", "temperture"]
skip = "./.git,./.agents,./.mex,./.opencode,./.venv,./node_modules,docs-site/**,./uv.lock,./pnpm-lock.yaml,./package-lock.json,*.min.js,*.lock"

[tool.pydoclint]
style = "google"
check-return-types = true
skip-checking-short-docstrings = false
skip-checking-private-functions = true
skip-checking-raises = true
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
allow-init-docstring = true
check-class-attributes = false
require-return-section-when-returning-nothing = false
should-document-star-arguments = false
